- Fixed issue #14003: split() is deprecated in PHP 5.3.
- Implemented issue #13919: Added the runPreRoutingFilters() method to the
  ezcMvcDispatcherConfiguration interface and ezcMvcDispatcherConfigurable
  dispatcher, to be called after request generation, but before routing. This
  change breaks BC as it adds a new method to the ezcMvcDispatcherConfiguration
  interface.


1.0alpha2 - Monday 10 November 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Split out controller creation in the ezcMvcConfigurableDispatcher into its
  own method (createController()) for easier customization of controller
  loading.
- Fixed a bug where path elements where not urldecoded().
- Added support for installation prefixes to the router, to the request parsers
  to aid installation outside of the top-directory of a virtual host.
- Added the ezcMvcCatchAllRoute to allow fall back routes to a controller and
  an action with a pre-formatted name.
- Refactored ezcMvcController to allow easier overloading by inherited classes.
- Fixed a bug in action method name generation in the controller.
- Fixed a bug where the Content-Language header could not be set to anything
  else but en-GB with the HTTP response writer.
- Fixed issue #13772: Changed the controller to require an action method.
- Fixed issue #13773: Added a check for the return type for controller actions,
  and throw an exception when it's neither an ezcMvcResult or
  ezcMvcInternalRedirectObject.
- Fixed issue #13788: array_key_exists() function receives parameters in wrong
  order.
- Fixed issue #13845: Added tests for the __set_state() structs methods.
- Fixed issue #13853: Added the missing exception
  ezcMvcActionNotFoundException.
- Fixed issue #13901: Exceptions thrown in controllers are not catched for
  createFatalRedirectRequest with the configurable dispatcher.


1.0alpha1 - Monday 06 October 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
